--- a/src/dialogs/dialog-submit.html
+++ b/src/dialogs/dialog-submit.html
@@ -1,6 +1,6 @@
-<div class="dialog dialog-xs flex flex-col items-center justify-center rounded-3 py-10 px-5 dark:bg-black dark:text-white">
-  <svg class="icon text-green text-9xl mb-5">
+<div class="dialog dialog-xs flex flex-col items-center justify-center rounded-[26px_0px_26px_26px] py-10 px-5">
+  <svg class="icon text-primary text-9xl mb-5">
     <use xlink:href="img/icons.svg#success">
   </svg>
-  <h2 class="font-alt font-semibold text-24 leading-3">Ваша заявка успешно отправлена!</h2>
+  <h2 class="font-semibold text-center text-20 sm:text-24 leading-3">Ваша заявка успешно отправлена!</h2>
 </div>
