--- a/src/index.html
+++ b/src/index.html
@@ -478,24 +478,24 @@
 
 <section class="container relative overflow-hidden" data-listing="3">
   <div class="absolute inset-0">
-    <img class="hidden xl:block absolute -left-12 top-0 w-full max-w-[300px]" src="img/pictures/patch-big.svg" alt="">
-    <img class="hidden xl:block absolute right-4 top-0 w-full max-w-[300px]" src="img/pictures/pill-open.svg" alt="">
-    <img class="hidden xl:block absolute -left-4 top-[400px] w-full max-w-[300px]" src="img/pictures/tablet.svg" alt="">
-    <img class="hidden xl:block absolute right-[120px] top-[400px] w-full max-w-[150px]" src="img/pictures/jar.svg" alt="">
-    <img class="hidden xl:block absolute left-14 top-[900px] w-full max-w-[200px]" src="img/pictures/pack.svg" alt="">
-    <img class="hidden xl:block absolute -right-16 top-[800px] w-full max-w-[300px]" src="img/pictures/pills.svg" alt="">
+    <img class="hidden xl:block absolute -left-12 top-[150px] w-full max-w-[300px]" src="img/pictures/patch-big.svg" alt="">
+    <img class="hidden xl:block absolute right-4 top-[150px] w-full max-w-[300px]" src="img/pictures/pill-open.svg" alt="">
+    <img class="hidden xl:block absolute -left-4 top-[550px] w-full max-w-[300px]" src="img/pictures/tablet.svg" alt="">
+    <img class="hidden xl:block absolute right-[120px] top-[550px] w-full max-w-[150px]" src="img/pictures/jar.svg" alt="">
+    <img class="hidden xl:block absolute left-14 top-[1050px] w-full max-w-[200px]" src="img/pictures/pack.svg" alt="">
+    <img class="hidden xl:block absolute -right-16 top-[950px] w-full max-w-[300px]" src="img/pictures/pills.svg" alt="">
     <img class="hidden xl:block absolute -left-10 top-[1600px] w-full max-w-[250px]" src="img/pictures/pill-big.svg" alt="">
-    <img class="hidden xl:block absolute -right-20 top-[1600px] w-full max-w-[350px]" src="img/pictures/pills-pack.svg" alt="">
+    <img class="hidden xl:block absolute -right-20 top-[1650px] w-full max-w-[350px]" src="img/pictures/pills-pack.svg" alt="">
     <img class="hidden xl:block absolute -left-16 top-[2300px] rotate-[95deg] w-full max-w-[300px]" src="img/pictures/tube.svg" alt="">
-    <img class="hidden xl:block absolute -right-28 top-[2500px] w-full max-w-[300px]" src="img/pictures/patch-big.svg" alt="">
-    <img class="hidden xl:block absolute left-[140px] top-[2800px] w-full max-w-[300px]" src="img/pictures/pack-min.svg" alt="">
-    <img class="hidden xl:block absolute -right-20 top-[3100px] w-full max-w-[350px]" src="img/pictures/pack-height.svg" alt="">
-    <img class="hidden xl:block absolute -left-10 top-[3800px] w-full max-w-[250px]" src="img/pictures/pills-two.svg" alt="">
-    <img class="hidden xl:block absolute -right-10 top-[3800px] -rotate-180 w-full max-w-[300px]" src="img/pictures/thermometer.svg" alt="">
-    <img class="hidden xl:block absolute left-0 top-[4300px] -rotate-[200deg] w-full max-w-[150px]" src="img/pictures/syringe.svg" alt="">
-    <img class="hidden xl:block absolute -right-[90px] top-[4300px] rotate-[150deg] w-full max-w-[300px]" src="img/pictures/patch.svg" alt="">
-    <img class="hidden xl:block absolute -left-16 -bottom-28 w-full -rotate-45 max-w-[450px]" src="img/pictures/pill-open.svg" alt="">
-    <img class="hidden xl:block absolute -right-20 -bottom-28 w-full max-w-[450px]" src="img/pictures/pills-big-two.svg" alt="">
+    <img class="hidden xl:block absolute -right-28 top-[2400px] w-full max-w-[300px]" src="img/pictures/patch-big.svg" alt="">
+    <img class="hidden xl:block absolute left-[140px] top-[2750px] w-full max-w-[300px]" src="img/pictures/pack-min.svg" alt="">
+    <img class="hidden xl:block absolute -right-20 top-[2900px] w-full max-w-[350px]" src="img/pictures/pack-height.svg" alt="">
+    <img class="hidden xl:block absolute -left-10 top-[3700px] w-full max-w-[250px]" src="img/pictures/pills-two.svg" alt="">
+    <img class="hidden xl:block absolute -right-10 top-[3700px] -rotate-180 w-full max-w-[300px]" src="img/pictures/thermometer.svg" alt="">
+    <img class="hidden xl:block absolute left-0 top-[4250px] -rotate-[200deg] w-full max-w-[150px]" src="img/pictures/syringe.svg" alt="">
+    <img class="hidden xl:block absolute -right-[90px] top-[4250px] rotate-[150deg] w-full max-w-[300px]" src="img/pictures/patch.svg" alt="">
+    <img class="hidden xl:block absolute -left-16 -bottom-0 w-full -rotate-45 max-w-[450px]" src="img/pictures/pill-open.svg" alt="">
+    <img class="hidden xl:block absolute -right-20 -bottom-0 w-full max-w-[450px]" src="img/pictures/pills-big-two.svg" alt="">
   </div>
   <div class="relative">
     <div class="flex flex-col gap-6 sm:gap-10 lg:gap-20">
@@ -588,8 +588,8 @@
 
 <section class="container relative overflow-hidden">
   <div class="absolute inset-0">
-    <img class="hidden lg:block absolute top-[200px] -left-20 rotate-[110deg] w-full max-w-[200px]" src="img/pictures/pack.svg" alt="">
-    <img class="hidden lg:block absolute top-20 -right-[120px] w-full max-w-[200px] xl:max-w-[300px]" src="img/pictures/patch-big.svg" alt="">
+    <img class="hidden lg:block absolute top-[200px] -left-20 rotate-[110deg] w-full max-w-[250px]" src="img/pictures/pack.svg" alt="">
+    <img class="hidden lg:block absolute top-20 -right-[120px] w-full max-w-[200px] xl:max-w-[400px]" src="img/pictures/patch-big.svg" alt="">
   </div>
   <div class="flex items-end justify-between gap-5 relative">
     <div class="w-full lg:max-w-[530px]">
@@ -645,6 +645,68 @@
           <img class="image image-rise" loading="lazy" src="img/pictures/feedback-img.jpg" alt="">
         </picture>
       </div>
+    </div>
+  </div>
+</section>
+
+<!-- Эксперты -->
+
+<% var experts = [
+  {
+    anim: 'anim--right',
+    img: '1',
+    title: 'Александр Миронов',
+    subtitle: 'генеральный директор АС «Аптека Фарма» и консалтинговой компании «Фабула»',
+    textFirst: 'Более 13 лет на руководящих постах в отрасли',
+    textLast: 'Управляет хх аптеками, ххх человек в подчинении'
+  },
+  {
+    anim: 'anim--left',
+    img: '2',
+    title: 'Акоп Варпетян',
+    subtitle: 'руководитель направления развития франшизы АС «Аптека Фарма»',
+    textFirst: 'экс-владелец крупнейшей аптечной сети в Тверской области «36,6 - Здоровье»',
+    textLast: 'Эксперт фармацевтического рынка, более 13 лет в отрасли'
+  }
+] %>
+
+<section class="container relative overflow-hidden">
+  <div class="absolute inset-0">
+    <img class="hidden lg:block absolute top-[100px] -left-10 w-full max-w-[250px]" src="img/pictures/pills.svg" alt="">
+    <img class="hidden lg:block absolute top-[200px] right-10 rotate-45 w-full max-w-[200px] xl:max-w-[300px]" src="img/pictures/pills-pack.svg" alt="">
+  </div>
+  <div class="relative">
+    <h2 class="font-semibold uppercase text-26 sm:text-30 md:text-36 leading-3 mb-7 lg:mb-14 duration-5 anim anim--right" data-anim="hidden">С ВАМИ РАБОТАЮТ ПРИЗНАННЫЕ ЭКСПЕРТЫ</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-7">
+      <% for (var i = 0; i < experts.length; i++) { %>
+      <div class="duration-5 anim <%= experts[i].anim %>" data-anim="hidden">
+        <div class="card rounded-[50px_5px_50px_50px] h-full pt-4 pb-8 px-4 sm:pt-6 sm:pb-10 sm:px-6 lg:pt-10 lg:pb-14" data-waved="dark">
+          <div class="card-content xl:flex-row xl:justify-between gap-5 sm:gap-7">
+            <div class="w-full max-w-[130px] sm:max-w-[190px]">
+              <div class="pack pack-box bg-grey rounded-[500px_500px_5px_500px]">
+                <div class="loader">
+                  <span class="loader-progress">
+                    <svg class="loader-icon icon">
+                      <use xlink:href="img/icons.svg#loader">
+                    </svg>
+                  </span>
+                </div>
+                <picture>
+                  <source srcset="img/pictures/expert-<%= experts[i].img %>.webp" type="image/webp">
+                  <img class="image" loading="lazy" src="img/pictures/expert-<%= experts[i].img %>.png" alt="">
+                </picture>
+              </div>
+            </div>
+            <div class="flex flex-col items-start w-full xl:max-w-[270px]">
+              <h3 class="font-semibold text-20 sm:text-24 leading-2 mb-4"><%= experts[i].title %></h3>
+              <h4 class="font-medium text-16 leading-5 mb-4"><%= experts[i].subtitle %></h4>
+              <p class="font-normal text-14 sm:text-16 leading-5 mb-2"><%= experts[i].textFirst %></p>
+              <p class="font-normal text-14 sm:text-16 leading-5"><%= experts[i].textLast %></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% } %>
     </div>
   </div>
 </section>
