--- a/src/index.html
+++ b/src/index.html
@@ -796,7 +796,11 @@
 ] %>
 
 <section class="container relative overflow-hidden">
-  <div class="absolute inset-0"></div>
+  <div class="absolute inset-0">
+    <img class="hidden lg:block absolute top-[260px] -left-[70px] w-full max-w-[300px]" src="img/pictures/pack-circle.svg" alt="">
+    <img class="hidden lg:block absolute bottom-[160px] left-8 w-full max-w-[300px]" src="img/pictures/pills-large.svg" alt="">
+    <img class="hidden lg:block absolute top-[400px] -right-[150px] rotate-[70deg] w-full max-w-[450px]" src="img/pictures/thermometer.svg" alt="">
+  </div>
   <div class="relative">
     <h2 class="font-semibold uppercase text-26 sm:text-30 md:text-36 leading-3 mb-7 lg:mb-14 duration-5 anim anim--right" data-anim="hidden">ЧТО ГОВОРЯТ О НАС ЭКСПЕРТЫ</h2>
     <div class="flex flex-col gap-5 sm:gap-8 lg:gap-12">
